adding complete .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,21 @@
- 
+# Django settings
+DEBUG=False  # Set to True for development, False for production
+SECRET_KEY=your_secret_key_here  # Django secret key, keep this secret!
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,your_domain.com  # Comma-separated list of allowed hosts
+
+# Database settings
+DB_NAME=your_db_name  # PostgreSQL database name
+DB_USER=your_db_user  # PostgreSQL database user
+DB_PASSWORD=your_db_password  # PostgreSQL database password
+DB_HOST=db  # PostgreSQL host (use 'db' for Docker setup)
+DB_PORT=5432  # PostgreSQL port
+
+# Database URL (constructed from above settings)
+DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+
+# Grafana settings
+GRAFANA_ADMIN_PASSWORD=your_grafana_admin_password  # Set a strong password for Grafana admin
+
+# NB! IMPORTANT: Never commit the actual .env file to version control!
+# This .env.sample file is a template. Copy it to .env and fill in your actual values.
+# The .env file should be kept secret and not shared or committed to the repository.
