updated settings and templates

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,6 +46,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
+    - name: List installed packages
+      run: pip list
+    
     - name: Create log directory
       run: mkdir -p logs
     
