--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,7 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = user_directory.settings
 python_files = tests.py test_*.py *_tests.py
+addopts = -v --ignore=venv
 filterwarnings =
     ignore::DeprecationWarning:drf_yasg.*:
-
-
-
-
-
-
 
