--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,26 @@
 asgiref==3.7.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-Django==4.2.7
+certifi==2023.11.17
+charset-normalizer==3.3.2
+Django==5.0
 django-environ==0.11.2
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
+djangorestframework-simplejwt==5.3.1
 docker==6.1.3
 gunicorn==21.2.0
-idna==3.4
-packaging==23.1
-psycopg2-binary==2.9.7
+idna==3.6
+packaging==23.2
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 requests==2.31.0
 sqlparse==0.4.4
-urllib3==2.0.4
-django-widget-tweaks==1.4.8
-pytest==7.3.1
-pytest-django==4.5.2
-coverage==7.2.7
+urllib3==2.1.0
+django-widget-tweaks==1.5.0
+pytest==7.4.3
+pytest-django==4.7.0
+coverage==7.3.2
 drf-yasg==1.21.7
-django-prometheus
-typing-extensions>=4.0.0
-pytz
+django-prometheus==2.3.1
+typing-extensions==4.8.0
+pytz==2023.3.post1
+django-cors-headers==4.3.1
+setuptools==69.0.2
