--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,11 @@ jobs:
       with:
         python-version: '3.9'
     
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcc libpq-dev python3-dev
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
