--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -12,6 +12,8 @@ services:
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
       - DJANGO_SETTINGS_MODULE=user_directory.settings
+    env_file:
+      - .env
     depends_on:
       - db
 
