--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -5,7 +5,7 @@ services:
     build: .
     command: >
       sh -c "
-        ./wait-for-it.sh db:5432 -t 60 &&
+        /app/wait-for-it.sh db:5432 -t 60 &&
         python manage.py migrate &&
         pytest
       "
